Shorted spark_job_server username to job_server to avoid length error in mysql.  Use MetaSpaceSize instead of MaxPermSize since MaxPermSize is no longer supported since java 8.